now in responsive mode, work experience is shown first

--- a/src/pages/Resume/style.css
+++ b/src/pages/Resume/style.css
@@ -61,8 +61,8 @@
     display: grid;
   grid-template-columns: 8fr 2fr;
   grid-template-areas: 
-  "right"
-  "left";
+  "left"
+  "right";
   padding: 20px;
   }
 
